creusot/tests/should_fail/bug/692.coma

module C692_Incorrect
  type c
  type b
  predicate resolve0 (self : c)
  let rec resolve0 (self:c) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = resolve0 self} (! return' {result}) ]
    
  use prelude.Borrow
  predicate postcondition_mut0 (self : borrowed c) (_2 : ()) (_3 : bool)
  let rec postcondition_mut0 (self:borrowed c) (_2:()) (_3:bool) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = postcondition_mut0 self _2 _3} (! return' {result}) ]
    
  predicate inv2 (_x : borrowed c)
  let rec inv2 (_x:borrowed c) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = inv2 _x} (! return' {result}) ]
    
  predicate postcondition_once0 (self : c) (_2 : ()) (_3 : bool)
  let rec postcondition_once0 (self:c) (_2:()) (_3:bool) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = postcondition_once0 self _2 _3} (! return' {result}) ]
    
  predicate inv4 (_x : bool)
  let rec inv4 (_x:bool) (return'  (ret:bool))= any [ return' (result:bool)-> {result = inv4 _x} (! return' {result}) ] 
  predicate inv3 (_x : ())
  let rec inv3 (_x:()) (return'  (ret:bool))= any [ return' (result:bool)-> {result = inv3 _x} (! return' {result}) ] 
  predicate inv0 (_x : c)
  let rec inv0 (_x:c) (return'  (ret:bool))= any [ return' (result:bool)-> {result = inv0 _x} (! return' {result}) ] 
  function fn_mut_once0 (self : c) (args : ()) (res : bool) : ()
  let rec fn_mut_once0 (self:c) (args:()) (res:bool) (return'  (ret:()))= {[#"../../../../../creusot-contracts/src/std/ops.rs" 123 37 123 40] inv4 res}
    {[#"../../../../../creusot-contracts/src/std/ops.rs" 123 25 123 29] inv3 args}
    {[#"../../../../../creusot-contracts/src/std/ops.rs" 123 19 123 23] inv0 self}
    any [ return' (result:())-> {result = fn_mut_once0 self args res} (! return' {result}) ] 
  axiom fn_mut_once0_spec : forall self : c, args : (), res : bool . ([#"../../../../../creusot-contracts/src/std/ops.rs" 123 19 123 23] inv0 self)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 123 25 123 29] inv3 args)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 123 37 123 40] inv4 res)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 122 14 122 135] postcondition_once0 self args res = (exists s : borrowed c . inv2 s /\  * s = self /\ postcondition_mut0 s args res /\ resolve0 ( ^ s)))
  predicate unnest0 (self : c) (_2 : c)
  let rec unnest0 (self:c) (_2:c) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = unnest0 self _2} (! return' {result}) ]
    
  function unnest_trans0 (self : c) (b : c) (c : c) : ()
  let rec unnest_trans0 (self:c) (b:c) (c:c) (return'  (ret:()))= {[#"../../../../../creusot-contracts/src/std/ops.rs" 117 35 117 36] inv0 c}
    {[#"../../../../../creusot-contracts/src/std/ops.rs" 117 26 117 27] inv0 b}
    {[#"../../../../../creusot-contracts/src/std/ops.rs" 117 20 117 24] inv0 self}
    {[#"../../../../../creusot-contracts/src/std/ops.rs" 115 15 115 26] unnest0 b c}
    {[#"../../../../../creusot-contracts/src/std/ops.rs" 114 15 114 29] unnest0 self b}
    any [ return' (result:())-> {result = unnest_trans0 self b c} (! return' {result}) ] 
  axiom unnest_trans0_spec : forall self : c, b : c, c : c . ([#"../../../../../creusot-contracts/src/std/ops.rs" 114 15 114 29] unnest0 self b)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 115 15 115 26] unnest0 b c)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 117 20 117 24] inv0 self)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 117 26 117 27] inv0 b)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 117 35 117 36] inv0 c)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 116 14 116 28] unnest0 self c)
  function unnest_refl0 (self : c) : ()
  let rec unnest_refl0 (self:c) (return'  (ret:()))= {[#"../../../../../creusot-contracts/src/std/ops.rs" 110 19 110 23] inv0 self}
    any [ return' (result:())-> {result = unnest_refl0 self} (! return' {result}) ] 
  axiom unnest_refl0_spec : forall self : c . ([#"../../../../../creusot-contracts/src/std/ops.rs" 110 19 110 23] inv0 self)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 109 14 109 31] unnest0 self self)
  function postcondition_mut_unnest0 (self : borrowed c) (args : ()) (res : bool) : ()
  let rec postcondition_mut_unnest0 (self:borrowed c) (args:()) (res:bool) (return'  (ret:()))= {[#"../../../../../creusot-contracts/src/std/ops.rs" 105 55 105 58] inv4 res}
    {[#"../../../../../creusot-contracts/src/std/ops.rs" 105 43 105 47] inv3 args}
    {[#"../../../../../creusot-contracts/src/std/ops.rs" 105 37 105 41] inv2 self}
    {[#"../../../../../creusot-contracts/src/std/ops.rs" 103 15 103 48] postcondition_mut0 self args res}
    any [ return' (result:())-> {result = postcondition_mut_unnest0 self args res} (! return' {result}) ] 
  axiom postcondition_mut_unnest0_spec : forall self : borrowed c, args : (), res : bool . ([#"../../../../../creusot-contracts/src/std/ops.rs" 103 15 103 48] postcondition_mut0 self args res)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 105 37 105 41] inv2 self)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 105 43 105 47] inv3 args)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 105 55 105 58] inv4 res)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 104 14 104 35] unnest0 ( * self) ( ^ self))
  predicate invariant4 (self : bool) =
    [#"../../../../../creusot-contracts/src/invariant.rs" 8 8 8 12] true
  let rec invariant4 (self:bool) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = invariant4 self} (! return' {result}) ]
    
  axiom inv4 : forall x : bool . inv4 x = true
  predicate invariant3 (self : ()) =
    [#"../../../../../creusot-contracts/src/invariant.rs" 8 8 8 12] true
  let rec invariant3 (self:()) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = invariant3 self} (! return' {result}) ]
    
  axiom inv3 : forall x : () . inv3 x = true
  predicate invariant2 (self : borrowed c)
  let rec invariant2 (self:borrowed c) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = invariant2 self} (! return' {result}) ]
    
  axiom inv2 : forall x : borrowed c . inv2 x = true
  predicate postcondition0 (self : c) (_2 : ()) (_3 : bool)
  let rec postcondition0 (self:c) (_2:()) (_3:bool) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = postcondition0 self _2 _3} (! return' {result}) ]
    
  function fn_once0 (self : c) (args : ()) (res : bool) : ()
  let rec fn_once0 (self:c) (args:()) (res:bool) (return'  (ret:()))= {[#"../../../../../creusot-contracts/src/std/ops.rs" 145 33 145 36] inv4 res}
    {[#"../../../../../creusot-contracts/src/std/ops.rs" 145 21 145 25] inv3 args}
    {[#"../../../../../creusot-contracts/src/std/ops.rs" 145 15 145 19] inv0 self}
    any [ return' (result:())-> {result = fn_once0 self args res} (! return' {result}) ] 
  axiom fn_once0_spec : forall self : c, args : (), res : bool . ([#"../../../../../creusot-contracts/src/std/ops.rs" 145 15 145 19] inv0 self)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 145 21 145 25] inv3 args)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 145 33 145 36] inv4 res)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 144 14 144 101] postcondition_once0 self args res = (resolve0 self /\ postcondition0 self args res))
  predicate resolve2 (self : borrowed c) =
    [#"../../../../../creusot-contracts/src/resolve.rs" 25 20 25 34]  ^ self =  * self
  let rec resolve2 (self:borrowed c) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = resolve2 self} (! return' {result}) ]
    
  function fn_mut0 (self : borrowed c) (args : ()) (res : bool) : ()
  let rec fn_mut0 (self:borrowed c) (args:()) (res:bool) (return'  (ret:()))= {[#"../../../../../creusot-contracts/src/std/ops.rs" 139 37 139 40] inv4 res}
    {[#"../../../../../creusot-contracts/src/std/ops.rs" 139 25 139 29] inv3 args}
    {[#"../../../../../creusot-contracts/src/std/ops.rs" 139 19 139 23] inv2 self}
    any [ return' (result:())-> {result = fn_mut0 self args res} (! return' {result}) ] 
  axiom fn_mut0_spec : forall self : borrowed c, args : (), res : bool . ([#"../../../../../creusot-contracts/src/std/ops.rs" 139 19 139 23] inv2 self)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 139 25 139 29] inv3 args)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 139 37 139 40] inv4 res)
   -> ([#"../../../../../creusot-contracts/src/std/ops.rs" 138 14 138 100] postcondition_mut0 self args res = (resolve2 self /\ postcondition0 ( * self) args res))
  predicate invariant1 (self : b)
  let rec invariant1 (self:b) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = invariant1 self} (! return' {result}) ]
    
  predicate inv1 (_x : b)
  let rec inv1 (_x:b) (return'  (ret:bool))= any [ return' (result:bool)-> {result = inv1 _x} (! return' {result}) ] 
  axiom inv1 : forall x : b . inv1 x = true
  predicate invariant0 (self : c)
  let rec invariant0 (self:c) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = invariant0 self} (! return' {result}) ]
    
  axiom inv0 : forall x : c . inv0 x = true
  predicate precondition1 (self : b) (_2 : bool)
  let rec precondition1 (self:b) (_2:bool) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = precondition1 self _2} (! return' {result}) ]
    
  predicate precondition0 (self : c) (_2 : ())
  let rec precondition0 (self:c) (_2:()) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = precondition0 self _2} (! return' {result}) ]
    
  use prelude.Intrinsic
  predicate resolve1 (self : b)
  let rec resolve1 (self:b) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = resolve1 self} (! return' {result}) ]
    
  let rec incorrect (cond:c) (branch:b) (return'  (ret:()))= {[#"../692.rs" 8 66 8 72] inv1 branch}
    {[#"../692.rs" 8 57 8 61] inv0 cond}
    {[#"../692.rs" 5 0 6 87] precondition0 cond () /\ (forall b : bool . precondition1 branch (b) /\ (exists b : bool . forall b0 : bool . postcondition0 cond () b0
     -> b0 = b))}
    (! bb0 
    [ bb3 = return' {_0} 
    | bb2 = bb3 
    | bb1 = [ &_0 <- [#"../692.rs" 8 77 8 79] () ] bb2 
    | bb0 = {[@expl:type invariant] inv1 branch}
      -{resolve1 branch}- {[@expl:type invariant] inv0 cond}
      -{resolve0 cond}- bb1  ]
    ) [ return' (result:())-> {[#"../692.rs" 7 10 7 15] false} (! return' {_0}) ] 
    [ & _0 : () = any_l () : () | & cond : c = cond | & branch : b = branch ]
    
end
module C692_ValidNormal_Closure1_Type
  use prelude.Int8
  use prelude.UInt32
  use prelude.Int
  use prelude.Borrow
  type c692_validnormal_closure1  =
    | C692_ValidNormal_Closure1 uint32
    
end
module C692_ValidNormal_Closure1
  use prelude.Int8
  use prelude.UInt32
  use C692_ValidNormal_Closure1_Type as C692_ValidNormal_Closure1
  use prelude.Borrow
  use prelude.Intrinsic
  use prelude.Int
  function field_00 [#"../692.rs" 13 15 13 47] (self : C692_ValidNormal_Closure1.c692_validnormal_closure1) : uint32 =
    let C692_ValidNormal_Closure1.C692_ValidNormal_Closure1 a = self in a
  let rec field_00 (self:C692_ValidNormal_Closure1.c692_validnormal_closure1) (return'  (ret:uint32))= any 
    [ return' (result:uint32)-> {result = field_00 self} (! return' {result}) ]
    
  let rec c692_ValidNormal_Closure1 (_1:C692_ValidNormal_Closure1.c692_validnormal_closure1) (return'  (ret:bool))= (! bb0
    
    [ bb0 = UInt32.gt {field_00 _1} {[#"../692.rs" 14 11 14 15] (7 : uint32)} (fun (_ret':bool) -> [ &res <- _ret' ] 
        [ &_0 <- res ]
        return' {_0})  ]
    ) [ return' (result:bool)-> {[#"../692.rs" 13 25 13 45] result = (field_00 _1 > (7 : uint32))} (! return' {_0}) ] 
    [ & _0 : bool = any_l () : bool
    | & _1 : C692_ValidNormal_Closure1.c692_validnormal_closure1 = _1
    | & res : bool = any_l () : bool ]
    
end
module C692_ValidNormal_Closure2_Type
  use prelude.Int16
  use prelude.UInt32
  use prelude.Int
  use prelude.Borrow
  type c692_validnormal_closure2  =
    | C692_ValidNormal_Closure2 (borrowed uint32)
    
end
module C692_ValidNormal_Closure2
  use prelude.Int16
  use prelude.Int
  use prelude.UInt32
  use prelude.Borrow
  use C692_ValidNormal_Closure2_Type as C692_ValidNormal_Closure2
  function field_00 [#"../692.rs" 15 17 15 64] (self : C692_ValidNormal_Closure2.c692_validnormal_closure2) : borrowed uint32
    
   =
    let C692_ValidNormal_Closure2.C692_ValidNormal_Closure2 a = self in a
  let rec field_00 (self:C692_ValidNormal_Closure2.c692_validnormal_closure2) (return'  (ret:borrowed uint32))= any 
    [ return' (result:borrowed uint32)-> {result = field_00 self} (! return' {result}) ]
    
  predicate unnest0 [#"../692.rs" 15 17 15 64] (self : C692_ValidNormal_Closure2.c692_validnormal_closure2) (_2 : C692_ValidNormal_Closure2.c692_validnormal_closure2)
    
   =
     ^ field_00 _2 =  ^ field_00 self
  use prelude.Intrinsic
  predicate resolve0 (self : borrowed C692_ValidNormal_Closure2.c692_validnormal_closure2) =
    [#"../../../../../creusot-contracts/src/resolve.rs" 25 20 25 34]  ^ self =  * self
  let rec resolve0 (self:borrowed C692_ValidNormal_Closure2.c692_validnormal_closure2) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = resolve0 self} (! return' {result}) ]
    
  let rec c692_ValidNormal_Closure2 (_1:borrowed C692_ValidNormal_Closure2.c692_validnormal_closure2) (b:bool) (return'  (ret:()))= (! bb0
    
    [ bb3 = 
      [ &_1 <- { _1 with current = (let C692_ValidNormal_Closure2.C692_ValidNormal_Closure2 x0 =  * _1 in C692_ValidNormal_Closure2.C692_ValidNormal_Closure2 ({ (field_00 ( * _1)) with current = _4 ; })) ; } ]
      any 
      [ any_ (_any:uint32)-> [ &_4 <- _any ] -{resolve0 _1}- [ &res <- [#"../692.rs" 16 14 16 39] () ] 
        [ &_0 <- res ]
        return' {_0} ]
       
    | bb2 = [ &_4 <- [#"../692.rs" 16 36 16 37] (1 : uint32) ] bb3 
    | bb1 = [ &_4 <- [#"../692.rs" 16 25 16 26] (2 : uint32) ] bb3 
    | bb0 = any [ br0 -> {b = false} (! bb2) | br1 -> {b} (! bb1) ]   ]
    ) 
    [ return' (result:())-> {unnest0 ( * _1) ( ^ _1)}
      {[#"../692.rs" 15 27 15 62] b /\  * field_00 ( ^ _1) = (2 : uint32) \/ not b /\  * field_00 ( ^ _1) = (1 : uint32)}
      (! return' {_0}) ]
    
    [ & _0 : () = any_l () : ()
    | & _1 : borrowed C692_ValidNormal_Closure2.c692_validnormal_closure2 = _1
    | & b : bool = b
    | & res : () = any_l () : ()
    | & _4 : uint32 = any_l () : uint32 ]
    
end
module C692_ValidNormal
  use prelude.UInt32
  use prelude.Borrow
  use prelude.Int16
  use C692_ValidNormal_Closure2_Type as C692_ValidNormal_Closure2
  predicate invariant1 (self : C692_ValidNormal_Closure2.c692_validnormal_closure2) =
    [#"../../../../../creusot-contracts/src/invariant.rs" 8 8 8 12] true
  let rec invariant1 (self:C692_ValidNormal_Closure2.c692_validnormal_closure2) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = invariant1 self} (! return' {result}) ]
    
  predicate inv1 (_x : C692_ValidNormal_Closure2.c692_validnormal_closure2)
  let rec inv1 (_x:C692_ValidNormal_Closure2.c692_validnormal_closure2) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = inv1 _x} (! return' {result}) ]
    
  axiom inv1 : forall x : C692_ValidNormal_Closure2.c692_validnormal_closure2 . inv1 x = true
  use prelude.Int8
  use C692_ValidNormal_Closure1_Type as C692_ValidNormal_Closure1
  predicate invariant0 (self : C692_ValidNormal_Closure1.c692_validnormal_closure1) =
    [#"../../../../../creusot-contracts/src/invariant.rs" 8 8 8 12] true
  let rec invariant0 (self:C692_ValidNormal_Closure1.c692_validnormal_closure1) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = invariant0 self} (! return' {result}) ]
    
  predicate inv0 (_x : C692_ValidNormal_Closure1.c692_validnormal_closure1)
  let rec inv0 (_x:C692_ValidNormal_Closure1.c692_validnormal_closure1) (return'  (ret:bool))= any 
    [ return' (result:bool)-> {result = inv0 _x} (! return' {result}) ]
    
  axiom inv0 : forall x : C692_ValidNormal_Closure1.c692_validnormal_closure1 . inv0 x = true
  use prelude.Intrinsic
  use prelude.Int
  predicate resolve0 [#"../692.rs" 13 15 13 47] (_1 : C692_ValidNormal_Closure1.c692_validnormal_closure1) =
    true
  function field_00 [#"../692.rs" 13 15 13 47] (self : C692_ValidNormal_Closure1.c692_validnormal_closure1) : uint32 =
    let C692_ValidNormal_Closure1.C692_ValidNormal_Closure1 a = self in a
  let rec field_00 (self:C692_ValidNormal_Closure1.c692_validnormal_closure1) (return'  (ret:uint32))= any 
    [ return' (result:uint32)-> {result = field_00 self} (! return' {result}) ]
    
  predicate postcondition0 [#"../692.rs" 13 15 13 47] (self : C692_ValidNormal_Closure1.c692_validnormal_closure1) (_ : ()) (result : bool)
    
   =
    [#"../692.rs" 13 25 13 45] result = (field_00 self > (7 : uint32))
  predicate precondition1 [#"../692.rs" 15 17 15 64] (self : C692_ValidNormal_Closure2.c692_validnormal_closure2) (args : bool)
    
   =
    let (b) = args in true
  predicate precondition0 [#"../692.rs" 13 15 13 47] (self : C692_ValidNormal_Closure1.c692_validnormal_closure1) (_ : ())
    
   =
    true
  let rec incorrect0 (cond:C692_ValidNormal_Closure1.c692_validnormal_closure1) (branch:C692_ValidNormal_Closure2.c692_validnormal_closure2) (return'  (ret:()))= {[#"../692.rs" 8 66 8 72] inv1 branch}
    {[#"../692.rs" 8 57 8 61] inv0 cond}
    {[#"../692.rs" 5 0 6 87] precondition0 cond () /\ (forall b : bool . precondition1 branch (b) /\ (exists b : bool . forall b0 : bool . postcondition0 cond () b0
     -> b0 = b))}
    any [ return' (result:())-> {[#"../692.rs" 7 10 7 15] false} (! return' {result}) ] 
  let rec valid_normal (n:uint32) (return'  (ret:uint32))= (! bb0 
    [ bb1 = [ &_0 <- r ] return' {_0} 
    | bb0 = [ &r <- [#"../692.rs" 12 16 12 20] (0 : uint32) ] 
      [ &cond <- C692_ValidNormal_Closure1.C692_ValidNormal_Closure1 n ]
      Borrow.borrow_mut <uint32> {r} (fun (_ret':borrowed uint32) -> [ &_7 <- _ret' ] [ &r <-  ^ _7 ] 
        [ &branch <- C692_ValidNormal_Closure2.C692_ValidNormal_Closure2 _7 ]
        any 
        [ any_ (_any:borrowed uint32)-> [ &_7 <- _any ] -{resolve0 cond}- incorrect0 {cond} {branch} (fun (_ret':()) -> 
            [ &_8 <- _ret' ]
            bb1) ]
        )  ]
    ) [ return' (result:uint32)-> {[#"../692.rs" 10 10 10 15] false} (! return' {_0}) ] 
    [ & _0 : uint32 = any_l () : uint32
    | & n : uint32 = n
    | & r : uint32 = any_l () : uint32
    | & cond : C692_ValidNormal_Closure1.c692_validnormal_closure1 = any_l () : C692_ValidNormal_Closure1.c692_validnormal_closure1
    | & branch : C692_ValidNormal_Closure2.c692_validnormal_closure2 = any_l () : C692_ValidNormal_Closure2.c692_validnormal_closure2
    | & _7 : borrowed uint32 = any_l () : borrowed uint32
    | & _8 : () = any_l () : () ]
    
end
